<resources>
    <string name="app_name">Rotten Techmatoes</string>
    <string name="title_activity_login">Login</string>

    <string name="text_blank"></string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings related to Toolbar -->
    <string name="action_view_profile">View Profile</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to Login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">\t\tWelcome\nPlease Log In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_cancel_short">Cancel</string>
    <!-- Strings related to Registration -->
    <string name="register">Register</string>
    <string name="registration">User Registration</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="cancel">Cancel</string>
    <!-- Strings related to Create Profile -->
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="profile">\t\tThanks for Registering!\nNow, Complete your Profile:</string>
    <string name="major">Choose your major:</string>
    <string name="profile_name">Enter your first and last name:</string>
    <string name="name_blank">Name</string>
    <string name="interests_blank">Interests</string>
    <string name="submit">Submit</string>
    <string name="share_interests">Share three interests (optional):</string>
    <string name="no_thanks">No Thanks</string>
    <!--Strings related to Home-->
    <string name="action_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="text_welcome">Welcome</string>
    <string name="hint_search">Search for…</string>
    <string name="action_search">Search</string>
    <string name="action_newReleases">New\nReleases</string>
    <string name="action_topRentals">Top\nRentals</string>
    <string name="action_recommend">Recommendations</string>
    <string name="action_newDVDs">New\nDVDs</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!--Strings related to Edit Profile-->
    <string name="text_profile">Profile</string>
    <string name="input_text_email">Email:</string>
    <string name="input_text_username">Username:</string>
    <string name="input_text_name">Name:</string>
    <string name="input_text_major">Major:</string>
    <string name="input_text_description">Description:</string>
    <string name="action_apply_changes">Apply Changes</string>
    <string name="action_cancel_changes">Cancel</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <!--Strings related to search results-->
    <string name="text_thumbnail">Thumbnail</string>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="title_activity_settings_activity.java">Settings</string>
    <string name="title_activity_manage_users">ManageUsersActivity</string>

    <!--Strings related to RottenTomatoes-->
    <string name="text_default_nothing">Not Available</string>

</resources>
