<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="theunderjackets.com.rottentechmatoes.HomeActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/view_profile"
        android:orderInCategory="50"
        android:title="@string/action_view_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_profile"
        android:orderInCategory="60"
        android:title="@string/action_edit_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="110"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>