<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="theunderjackets.com.rottentechmatoes.CreateProfileActivity"
    tools:showIn="@layout/activity_create_profile">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ChooseMajorSpinner"
        android:spinnerMode="dropdown"
        android:layout_above="@+id/nameBlank"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="64dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name_blank"
        android:ems="10"
        android:id="@+id/nameBlank"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:hint="@string/name_blank" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile"
        android:id="@+id/profile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/major"
        android:id="@+id/major"
        android:layout_above="@+id/ChooseMajorSpinner"
        android:layout_alignParentStart="true"
        android:textColorHighlight="#fb0202"
        android:textColor="#fe0303" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/profile_name"
        android:id="@+id/name"
        android:textColorHighlight="#fb0202"
        android:textColor="#fe0303"
        android:layout_above="@+id/nameBlank"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/interestsBlank"
        android:text="@string/interests_blank"
        android:layout_below="@+id/interests"
        android:layout_alignParentStart="true"
        android:hint="@string/interests_blank"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/share_interests"
        android:id="@+id/interests"
        android:textColorHighlight="#fb0202"
        android:textColor="#fe0303"
        android:layout_below="@+id/nameBlank"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        android:layout_below="@+id/interestsBlank"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_thanks"
        android:id="@+id/noThanksButton"
        android:layout_below="@+id/interestsBlank"
        android:layout_alignStart="@+id/profile" />
</RelativeLayout>
