<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="theunderjackets.com.rottentechmatoes.HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_welcome"
        android:id="@+id/textViewWelcomeUser"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_logout"
        android:id="@+id/logoutButton"
        android:layout_marginBottom="49dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textViewWelcomeUser" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_profile"
        android:id="@+id/editProfileButton"
        android:layout_alignTop="@+id/logoutButton"
        android:layout_toStartOf="@+id/textViewWelcomeUser" />

</RelativeLayout>
