<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="theunderjackets.com.rottentechmatoes.EditProfileActivity"
    tools:showIn="@layout/activity_edit_profile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Edit Profile"
        android:id="@+id/titleProfile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="36dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Username"
        android:ems="10"
        android:id="@+id/inputUsername"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/titleProfile"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/inputName"
        android:layout_below="@+id/inputUsername"
        android:layout_alignStart="@+id/inputUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:focusable="false"
        android:editable="false"
        android:id="@+id/inputEmail"
        android:layout_below="@+id/inputName"
        android:layout_alignStart="@+id/inputName"
        android:text="Email" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/majorSpinner"
        android:layout_below="@+id/inputEmail"
        android:layout_alignStart="@+id/inputEmail"
        android:spinnerMode="dropdown" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/inputDescription"
        android:text="Personal Interest &amp; Fun Facts"
        android:layout_below="@+id/majorSpinner"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_text_username"
        android:id="@+id/textUsername"
        android:layout_alignTop="@+id/inputUsername"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_text_name"
        android:id="@+id/textName"
        android:layout_below="@+id/inputUsername"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_text_email"
        android:id="@+id/textEmail"
        android:layout_below="@+id/inputName"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/input_text_major"
        android:id="@+id/textMajor"
        android:layout_alignTop="@+id/majorSpinner"
        android:layout_alignStart="@+id/textName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="About Me:"
        android:id="@+id/textDescription"
        android:layout_below="@+id/majorSpinner"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_apply_changes"
        android:id="@+id/buttonApplyChanges"
        android:layout_marginTop="49dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:background="@android:color/holo_green_light"
        android:layout_below="@+id/inputDescription"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/inputDescription"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel_changes"
        android:id="@+id/buttonCancelChanges"
        android:layout_alignTop="@+id/buttonApplyChanges"
        android:background="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:layout_alignEnd="@+id/inputDescription"/>

</RelativeLayout>
